Flipped axes on ptz joystick.
Added more manual segfaults. Hoping to catch the "OH NOEZ YOU CANT TOUCH THAT MEMORY" exception occasionally thrown in my xmlrpc wrapper.

--- a/XmlRpc_Wrapper/XmlRpc_Wrapper.csproj
+++ b/XmlRpc_Wrapper/XmlRpc_Wrapper.csproj
@@ -64,6 +64,7 @@
     <Compile Include="XmlRpcDispatch.cs" />
     <Compile Include="XmlRpcServer.cs" />
     <Compile Include="XMLRPCCallWrapper.cs" />
+    <Compile Include="XmlRpcSource.cs" />
     <Compile Include="XmlRpcValue.cs" />
   </ItemGroup>
   <ItemGroup>
