--- a/DREAMPioneer/DREAMPioneer/DREAMPioneer.csproj
+++ b/DREAMPioneer/DREAMPioneer/DREAMPioneer.csproj
@@ -181,6 +181,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="Robot Info.cs" />
+    <Compile Include="RobotColor.cs" />
     <Compile Include="RobotControl.xaml.cs">
       <DependentUpon>RobotControl.xaml</DependentUpon>
     </Compile>
