--- a/EricIsAMAZING/ROS_C-Sharp.csproj
+++ b/EricIsAMAZING/ROS_C-Sharp.csproj
@@ -188,6 +188,8 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'FUCKSTICK|x64'">
     <OutputPath>bin\x64\FUCKSTICK\</OutputPath>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+    <DefineConstants>DEBUG</DefineConstants>
+    <Optimize>true</Optimize>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Messages, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
