moving client synchronization code to separate class to make things easier to find for implementation.

--- a/DREAMPioneer/DREAMPioneer/DREAMPioneer.csproj
+++ b/DREAMPioneer/DREAMPioneer/DREAMPioneer.csproj
@@ -219,6 +219,7 @@
     <Compile Include="ViewportMD.xaml.cs">
       <DependentUpon>ViewportMD.xaml</DependentUpon>
     </Compile>
+    <Compile Include="WindowSync.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommonList.cs" />
