--- a/DREAMPioneer/DREAMPioneer/DREAMPioneer.csproj
+++ b/DREAMPioneer/DREAMPioneer/DREAMPioneer.csproj
@@ -383,6 +383,7 @@
   <ItemGroup>
     <Content Include="DREAMControllerConfig.xml">
       <SubType>Designer</SubType>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Interop.SpeechLib.dll" />
     <Content Include="Petzold.Media3D.dll" />
