--- a/ArmGaugeUC/ArmGaugeUC/ArmGaugeUC.csproj
+++ b/ArmGaugeUC/ArmGaugeUC/ArmGaugeUC.csproj
@@ -35,7 +35,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Messages">
-      <HintPath>..\..\ROS_Sharp\Messages\Messages.dll</HintPath>
+      <HintPath>..\..\Messages\Messages.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
