--- a/VoltageUC/BattVoltUC.csproj
+++ b/VoltageUC/BattVoltUC.csproj
@@ -35,7 +35,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Messages">
-      <HintPath>..\..\..\..\..\ROS_Sharp\EricIsAMAZING\bin\Debug\Messages.dll</HintPath>
+      <HintPath>..\Messages\Messages.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
