Fix intraprocess pub/sub... not that it should ever be used ever... but ok. here it is.

--- a/EricIsAMAZING/ROS_C-Sharp.csproj
+++ b/EricIsAMAZING/ROS_C-Sharp.csproj
@@ -142,6 +142,8 @@
     <Compile Include="CallbackQueue.cs" />
     <Compile Include="Connection.cs" />
     <Compile Include="ConnectionManager.cs" />
+    <Compile Include="LocalSubscriberLink.cs" />
+    <Compile Include="LocalPublisherLink.cs" />
     <Compile Include="Header.cs" />
     <Compile Include="Master.cs" />
     <Compile Include="MessageDeserializer.cs" />
